# assessment-engine

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
assessments/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
assessments/management/commands/: generate_sample_data.py
base/: managers.py  models.py
helpers/: llm_backends.py  permissions.py
main/: celery.py  settings.py  urls.py
